--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
-body {
+* {
   margin: 0;
   padding: 0;
+}
+body {
   display: flex;
-  place-items: center;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  /* border: 1px solid red; */
 }
